Feat: complete logic for recruiter page

--- a/modals/student-info-modal.html
+++ b/modals/student-info-modal.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-<div class="conteiner col-4">
+<div class="col-4">
     <div class="border rounded d-flex">
         <div class="leftcol">
             <div class="col-10"><img src="../img/man.png" alt="" class="photo rounded-circle border col-12"></div>
@@ -40,7 +40,6 @@
                 Комментарии
             </div>
             <div class="d-flex justify-content-between">
-                <button class = "btn btn-sm btn-outline-secondary">Напомнить</button>
                 <button class = "btn btn-sm btn-outline-secondary">Удалить</button>
                 <button class = "btn btn-sm btn-outline-secondary">Переместить</button>
             </div>
