--- a/pages/admin/recruiter-list/index.html
+++ b/pages/admin/recruiter-list/index.html
@@ -5,88 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../../css/index.css">
 </head>
 
 <body>
+<header class="header">
+    <h2 class="header__logo">HSE.Project</h2>
+</header>
+<input type="checkbox" id="menu-toggle"/>
+<label id="trigger" for="menu-toggle"></label>
+<label id="burger" for="menu-toggle"></label>
+<ul id="menu">
+    <li><a href="../recruiter-list/index.html">Все рекрутеры</a></li>
+    <li><a href="../students-list/index.html">Список студентов</a></li>
+    <li><a href="#">Баланс</a></li>
+</ul>
 <div class="container">
     <div class="row">
-        <main class="col-xl-7 ml-3">
+        <main class="col-xl-12">
 
             <div class="row">
-                <input type="text" placeholder = "поиск" class="form-control mt-3 col-3">
-                <div class="col-6"></div>
-
-                <input type="text" placeholder = "фильтр" class="form-control mt-3 col-3">
-
+                <div class="col-3"></div>
+                <input type="text" placeholder= "поиск" class="mt-3 col-6 form-control">
+                <div class="col-3"></div>
             </div>
-            <div class="row mt-3">
-                <div class="asideRequest col-6 ">
-                    <h2>Заявки</h2>
-                    <div class="row hr border rounded mt-3">
 
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
-                    <div class="row hr border rounded mt-3">
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
-                    <div class="row hr border rounded mt-3">
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
+            <div class="row hrs">
+                <div class="asideRequest hrs-column">
+                    <h2 class="hrs-column-title title">Заявки</h2>
+                    <div class="hrs-wrapper"></div>
                 </div>
-                <div class="asideVerify col-6">
-
-                    <h2>Верифицированные</h2>
-                    <div class="row hr border rounded mt-3">
-
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
-                    <div class="row hr border rounded mt-3">
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
-                    <div class="row hr border rounded mt-3">
-                        <div class="hrtxt col-8">
-                            <p class="mb-0"><b>Имя:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Компания:</b> Lorem, ipsum dolor.</p>
-                            <p class="mb-0"><b>Телефон:</b> +380631234567.</p>
-                        </div>
-                        <div class="col-3"> <img src="../../../img/man.png" alt="" class="photo rounded-circle border w-100"></div>
-                    </div>
+                <div class="asideVerify hrs-column">
+                    <h2 class="hrs-column-title title">Верифицированные</h2>
+                    <div class="hrs-wrapper"></div>
                 </div>
             </div>
 
         </main>
+
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
