--- a/pages/admin/students-list/index.html
+++ b/pages/admin/students-list/index.html
@@ -5,86 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/index.css">
 </head>
 
 <body>
+<header class="header">
+    <h2 class="header__logo">HSE.Project</h2>
+</header>
+<input type="checkbox" id="menu-toggle"/>
+<label id="trigger" for="menu-toggle"></label>
+<label id="burger" for="menu-toggle"></label>
+<ul id="menu">
+    <li><a href="../recruiter-list/index.html">Все рекрутеры</a></li>
+    <li><a href="../students-list/index.html">Список студентов</a></li>
+    <li><a href="#">Баланс</a></li>
+</ul>
+
 <div class="container">
     <div class="row">
-        <main class="col-xl-8 ">
+        <main class="col-xl-12">
             <div class="row">
                 <div class="col-10"></div>
-                <button class = "btn btn-sm btn-outline-info col-2 ">Добавить</button>
+                <button class = "button button--add-student col-2 ">Добавить</button>
             </div>
 
             <div class="row">
-                <div class="col-1"></div>
-                <div class="col-10 d-flex justify-content-center statistics">
-                    <div class="btn-group btn-group-toggle col-10" data-toggle="buttons" >
-                        <label class="btn btn-outline-dark">
-                            <input type="radio" name="options" id="option1"> Интерес
-                        </label>
-                        <label class="btn btn-outline-warning">
-                            <input type="radio" name="options" id="option2"> Собеседование
-                        </label>
-                        <label class="btn btn-outline-primary">
-                            <input type="radio" name="options" id="option3"> Стажировка
-                        </label>
-                        <label class="btn btn-outline-success">
-                            <input type="radio" name="options" id="option4"> Найм
-                        </label>
-                    </div>
-
+                    <div class="col-12 d-flex justify-content-center tabs">
+                        <button class="button tab tab--interest">Интерес</button>
+                        <button class="button tab tab--interview">Собеседование</button>
+                        <button class="button tab tab--trial-period">Стажировка</button>
+                        <button class="button tab tab--hire ">Найм</button>
                 </div>
-                <div class="col-1"></div>
             </div>
 
-            <div class = "row mt-3">
-                <div class="student col-3 border d-flex flex-column  align-items-center mt-2 rounded">
-                    <div class="col-10 border text-center">ID</div>
-                    <div class="col-10 border text-center mt-2">ФИО</div>
-                    <div class="col-10 border text-center mt-2">20.02.20</div>
-                    <div class="col-12  text-right mt-2">
-                        <button class = "btn border btn-outline-dark btn-sm">Подробнее</button>
-                    </div>
-                </div>
-                <div class="student col-3 border d-flex flex-column  align-items-center mt-2 rounded">
-                    <div class="col-10 border text-center">ID</div>
-                    <div class="col-10 border text-center mt-2">ФИО</div>
-                    <div class="col-10 border text-center mt-2">20.02.20</div>
-                    <div class="col-12  text-right mt-2">
-                        <button class = "btn border btn-outline-dark btn-sm">Подробнее</button>
-                    </div>
-                </div>
-                <div class="student col-3 border d-flex flex-column  align-items-center mt-2 rounded">
-                    <div class="col-10 border text-center">ID</div>
-                    <div class="col-10 border text-center mt-2">ФИО</div>
-                    <div class="col-10 border text-center mt-2">20.02.20</div>
-                    <div class="col-12  text-right mt-2">
-                        <button class = "btn border btn-outline-dark btn-sm">Подробнее</button>
-                    </div>
-                </div>
-                <div class="student col-3 border d-flex flex-column  align-items-center mt-2 rounded">
-                    <div class="col-10 border text-center">ID</div>
-                    <div class="col-10 border text-center mt-2">ФИО</div>
-                    <div class="col-10 border text-center mt-2">20.02.20</div>
-                    <div class="col-12  text-right mt-2">
-                        <button class = "btn border btn-outline-dark btn-sm">Подробнее</button>
-                    </div>
-                </div>
-                <div class="student col-3 border d-flex flex-column  align-items-center mt-2 rounded">
-                    <div class="col-10 border text-center">ID</div>
-                    <div class="col-10 border text-center mt-2">ФИО</div>
-                    <div class="col-10 border text-center mt-2">20.02.20</div>
-                    <div class="col-12  text-right mt-2">
-                        <button class = "btn border btn-outline-dark btn-sm">Подробнее</button>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row">
-
+            <div class="row mt-3 students">
             </div>
         </main>
     </div>
@@ -92,6 +48,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
