Feat: add logic for hrs and students in admin panel

--- a/pages/admin/students-list/index.html
+++ b/pages/admin/students-list/index.html
@@ -45,6 +45,70 @@
         </main>
     </div>
 </div>
+<div class="modal fade" id="studentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="student-info">
+                    <div class="student-info-data-wrapper it-school">
+                        <span class="student-info-data">IT школа:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                    <div class="student-info-data-wrapper id">
+                        <span class="student-info-data">ID:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                    <div class="student-info-data-wrapper phone">
+                        <span class="student-info-data">Телефон:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                    <div class="student-info-data-wrapper email">
+                        <span class="student-info-data">E-mail:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                    <div class="links">
+                        <h4 class="links-title">Ссылки студента</h4>
+                        <div class="student-info-data-wrapper email">
+                            <span class="student-info-data">CV:</span>
+                            <a class="link cv"></a>
+                        </div>
+                        <div class="student-info-data-wrapper email">
+                            <span class="student-info-data">Сертификат:</span>
+                            <a class="link sertificate"></a>
+                        </div>
+                    </div>
+                </div>
+                <table class="table">
+                    <thead class="table-head">
+                    <tr class="table-row">
+                        <td class="table-data">Общий</td>
+                        <td class="table-data">комп 1</td>
+                        <td class="table-data">комп 2</td>
+                        <td class="table-data">комп 3</td>
+                        <td class="table-data">комп 4</td>
+                        <td class="table-data">комп 5</td>
+                        <td class="table-data">комп 6</td>
+                        <td class="table-data">Дата сдачи</td>
+                    </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="button button--remove" data-dismiss="modal">Удалить</button>
+                <button type="button" class="button button--replace" data-dismiss="modal">Переместить</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
