--- a/pages/admin/recruiter-list/index.html
+++ b/pages/admin/recruiter-list/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/index.css">
 </head>
 
@@ -25,10 +26,12 @@
     <div class="row">
         <main class="col-xl-12">
 
-            <div class="row">
-                <div class="col-3"></div>
-                <input type="text" placeholder= "поиск" class="mt-3 col-6 form-control">
-                <div class="col-3"></div>
+            <div class="row search-panel">
+                <label class="search-label">
+                    <span class="title">Фильтр по компании</span>
+                    <input type="text" placeholder="Введи компанию" class="search-form">
+                </label>
+
             </div>
 
             <div class="row hrs">
@@ -44,6 +47,34 @@
 
         </main>
 
+    </div>
+</div>
+<div class="modal fade" id="hrModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="student-info">
+                    <div class="student-info-data-wrapper phone">
+                        <span class="student-info-data">Телефон:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                    <div class="student-info-data-wrapper email">
+                        <span class="student-info-data">E-mail:</span>
+                        <span class="student-info-value"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="button button--remove" data-status="0">Удалить</button>
+                <button type="button" class="button button--verficate" data-status="1">Верифицировать</button>
+            </div>
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
